--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js -e js,hbs"
+    "start": "node index.js"
   },
   "author": "Aryan",
   "license": "ISC",
@@ -21,5 +21,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "18.15.0"
   }
 }
